--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <h1>CEN 4010 GitHub Testing Page</h1>
-        <p>Name: Siobahn Devlin</p>
+        <p>Name: William Reed</p>
         <p>Major: Computer Science</p>
-        <p>Year: Super Senior</p>
-        <p>Hobbies: Videogames</p>
+        <p>Year: Senior</p>
+        <p>Hobbies: Music</p>
         <script src="" async defer></script>
     </body>
 </html>
